--- a/config.json
+++ b/config.json
@@ -19,7 +19,7 @@
     "BOTNAME": "𝐂𝐘𝐁𝐄𝐑 ☢️_𖣘 -𝐁𝐎𝐓 ⚠️",
     "PREFIX": "/",
     "ADMINBOT": [
-        "100000478146113",
+        "zayanahamedtushar",
         "61576520552554",
         "61550035211214"
     ],
